--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "postcss": "8.4.22",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
+    "husky": "^8.0.3"
   }
 }
