--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -17,11 +18,15 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "react-hook-form": "^7.43.9",
+    "react-hook-form-resolvers": "^0.0.1",
+    "tailwindcss": "3.3.1",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
+    "@hookform/devtools": "^4.3.1",
     "husky": "^8.0.3"
   }
 }
